@@ -7129,13 +7129,13 @@ sub variable_pretty_output ($@)
 	  $output_vars .= $var_comment{$var}{$cond};
 	}
 
+      my $val = $var_value{$var}{$cond};
+      my $equals = $var_type{$var}{$cond} eq ':' ? ':=' : '=';
+      my $make_condition = $cond->subst_string;
       # Suppress escaped new lines.  &pretty_print_internal will
       # add them back, maybe at other places.
       $val =~ s/\\$//mg;
 
-      my $val = $var_value{$var}{$cond};
-      my $equals = $var_type{$var}{$cond} eq ':' ? ':=' : '=';
-      my $make_condition = $cond->subst_string;
       $output_vars .= pretty_print_internal ("$make_condition$var $equals",
 					     "$make_condition\t",
 					     split (' ' , $val));
