@@ -1,5 +1,9 @@
 2002-12-04  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* automake.in (variable_pretty_output): Strip trailing
+	backslashes in $val after $val is defined...
+	Reported by Kevin Ryde.
+
 	* tests/depcomp2.test: Pass CC='gcc' as an argument to ./configure
 	not in the environment.  Otherwise the test will fail when
 	run with ksh and VERBOSE=x.
